--- a/theia-ruby-docker/Dockerfile
+++ b/theia-ruby-docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:8-stretch
 
 RUN apt-get update \
-    && apt-get install -y ruby ruby-dev \ 
+    && apt-get install -y ruby ruby-dev \
     && apt-get clean && rm -rf /var/cache/apt/* && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
 
 ARG version=latest
@@ -12,7 +12,8 @@ WORKDIR /home/theia
 ADD $version.package.json ./package.json
 ARG GITHUB_TOKEN
 RUN yarn --cache-folder ./ycache && rm -rf ./ycache
-RUN yarn theia build
+RUN yarn theia build && yarn theia download:plugins
 EXPOSE 3000
-ENV SHELL /bin/bash
+ENV SHELL=/bin/bash \
+    THEIA_DEFAULT_PLUGINS=local-dir:/home/theia/plugins
 ENTRYPOINT [ "yarn", "theia", "start", "/home/project", "--hostname=0.0.0.0" ]
